# kpy30band

./: .gitignore  README.md  pyproject.toml
kpy30band/: __init__.py  kpy30band.py
kpy30band/basicfns/: __init__.py  _general_functions.py
kpy30band/src/: _ZB_Hamiltonian.py  __init__.py  _alloy_params.py  _database_related.py  _general_Hamiltonian_fns.py  _models.py  database.py
kpy30band/utilities/: __init__.py  _general_plot_fns.py  _plot_fns.py
tutorials/: bulk_bandstructure.ipynb  kp.ipynb
